--- a/01-Create-Claims-Classification.ipynb
+++ b/01-Create-Claims-Classification.ipynb
@@ -158,7 +158,7 @@
     "training_portion = .80         # Use 80% of data for training, 20% for testing\n",
     "max_words        = 1000        # Max words in text input\n",
     "\n",
-    "data             = pd.read_csv('dataset/testdata1.csv')\n",
+    "data             = pd.read_csv('dataset/incident.csv')\n",
     "\n",
     "#============================================================================\n",
     "# TRY:  uncomment the below print statement and print out first 5 rows of \n",
