--- a/01-Create-Claims-Classification.ipynb
+++ b/01-Create-Claims-Classification.ipynb
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('models/repairmodel.h5')\n",
+    "model.save('predictmodels/repairmodel.h5')\n",
     "\n",
     "text_labels = encoder.classes_   #ndarray of output values (labels or classes)  e.g. other, brakes, starter\n",
     "\n",
@@ -502,7 +502,7 @@
     "#single_test_text = 'there is fluid leaking from the engine' \n",
     "\n",
     "print(single_test_text)    #print out the repair being categorized\n",
-    "model = keras.models.load_model('models/repairmodel.h5')  #load the model before called predict function\n",
+    "model = keras.models.load_model('predictmodels/repairmodel.h5')  #load the model before called predict function\n",
     "prediction = predict(single_test_text) \n",
     "print(prediction)                           #print the predicti\n"
    ]
