--- a/01-Create-Claims-Classification.ipynb
+++ b/01-Create-Claims-Classification.ipynb
@@ -478,7 +478,7 @@
     "#========================================\n",
     "#Run the firs time in order to save the model\n",
     "#=========================================\n",
-    "single_test_text = 'turn the key and nothing happens' \n",
+    "single_test_text = 'Need to add more memory to laptop' \n",
     "print(single_test_text)    #print out the repair being categorized\n",
     "\n",
     "prediction = predict(single_test_text) \n",
@@ -497,7 +497,7 @@
     "# repair cases so that we can see if the model can properly categorize\n",
     "# a Brake, a Starter and an Other repair text\n",
     "\n",
-    "single_test_text = 'press brake pedal and car wont stop'\n",
+    "single_test_text = 'Unable to post content on a Wiki page'\n",
     "#single_test_text = 'turn key over and hear a clicking sound' \n",
     "#single_test_text = 'there is fluid leaking from the engine' \n",
     "\n",
