--- a/05_Enter_Repair.ipynb
+++ b/05_Enter_Repair.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_text = 'car will not start'            #e.g. 'the brakes squeal when the car begins to stop'\n",
+    "my_text = 'Unable to post content on a Wiki page'            #e.g. 'the brakes squeal when the car begins to stop'\n",
     "#my_route = 'your_service (http://...)'   #this is the route that was created in your OpenShift dedicated project\n",
     "my_route = 'http://metrobus-repairs-nlp-workshop-metrobus-repairs.apps.integrations.fb55.p1.openshiftapps.com/'"
    ]
