--- a/04_MBR_test_application.ipynb
+++ b/04_MBR_test_application.ipynb
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "!curl -X POST -H \"Content-Type: application/json\" --data '{\"data\": \"brake feels spongy when pressed\"}' http://localhost:5000/prediction"
+    "!curl -X POST -H \"Content-Type: application/json\" --data '{\"data\": \"Unable to post content on a Wiki page\"}' http://localhost:5000/prediction"
    ]
   },
   {
