--- a/04_MBR_test_application.ipynb
+++ b/04_MBR_test_application.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "import requests\n",
     "import json\n",
-    "response = requests.post('http://127.0.0.1:5000/prediction', '{\"data\": \"I turn the key and nothing happens\"}')\n",
+    "response = requests.post('http://127.0.0.1:5000/prediction', '{\"data\": \"Employee payroll application server is down.\"}')\n",
     "response.json()"
    ]
   },
